@@ -1,47 +1,34 @@
 #!/bin/bash
 
+echo "Started the script for GWCC CI ingestion load"
+source /home/hadoop/conf/env_conf.properties
+date=`date +%Y-%m-%d`
+date_ts=`date '+%Y-%m-%d_%H%M%S%s'`
+mkdir -p $ingestion_base_dir/logs/$date
+log_file=$ingestion_base_dir"/logs/"$date"/gwccCIIngestion_"$date_ts".log"
 
-base_dir=/home/hadoop/edf
-hadoop_base_dir=/user/hadoop/edf
-oozie_files_path=$base_dir/gwcc/oozie
-spec_files_path=$base_dir/gwcc/spec_files
-jar_path=$base_dir/jars
-spark_app_jar_file_suffix=edf_dataingestion-assembly
-spark_app_jar_file_version=1.1.3.jar
-oozie_host=ip-10-64-102-242.corp.stateauto.com
-oozie_port=11000
-
+spec_files_path=$ingestion_base_dir/gwcc/spec_files
 
 spark-submit --class edf.dataingestion.DataLoad \
---master yarn --deploy-mode cluster  --conf spark.shuffle.spill=true \
- --conf spark.scheduler.mode=FAIR \
- --conf spark.executor.extraJavaOptions=-XX:MaxPermSize=1024m \
- --conf spark.sql.planner.externalSort=true --conf spark.shuffle.manager=sort \
- --conf spark.ui.port=8088 \
- --conf spark.rpc.message.maxSize=1024 --conf spark.file.transferTo=false \
- --conf spark.driver.maxResultSize=2g --conf spark.rdd.compress=true \
- --conf spark.executor.extraJavaOptions="-Dconfig.resource=spark-defaults.conf" \
- --conf spark.driver.JavaOptions="-Dspark.yarn.app.container.log.dir=/mnt/var/log/hadoop" \
- --conf spark.driver.extraJavaOptions="-Dconfig.file=spark-defaults.conf" \
- --conf spark.sql.parquet.writeLegacyFormat=true \
- --conf spark.enable.dynamicAllocation=true \
- --conf spark.dynamicAllocation.maxExecutors=100 \
- --conf spark.dynamicAllocation.minExecutors=1 \
- --conf spark.executor.cores=1 \
- --conf spark.executor.memory=3g --conf spark.driver.memory=25g  \
- --conf spark.executor.instances=1 --conf spark.serializer=org.apache.spark.serializer.KryoSerializer  \
- --name gwcc_ci_dataingestion \
- --files $spec_files_path/gwcc.properties#diProperties.properties,$spec_files_path/gwcc_lookup_info.csv#gwcc_lookup_info.csv,$spec_files_path/gwcc_pii_spec.csv#gwcc_pii_spec.csv,$spec_files_path/gwcc_table_spec.csv#gwcc_table_spec.csv,/etc/spark/conf/hive-site.xml \
+ --master yarn --deploy-mode cluster  \
+ --conf $spark_common_conf \
+ --conf spark.executor.cores=3 --conf spark.executor.memory=5g --conf spark.driver.memory=20g --conf spark.executor.memoryOverhead=512m \
+ --conf spark.dynamicAllocation.enabled=true \
+ --conf spark.dynamicAllocation.maxExecutors=75 \
+ --conf spark.dynamicAllocation.minExecutors=5 \
+ --name pcagg_delete_batch_dataingestion \
+ --name gwcc_ci_dataingestion  \
+ --files $spec_files_path/gwcc_CI.properties#diProperties.properties,$spec_files_path/gwcc_lookup_info.csv#gwcc_lookup_info.csv,$spec_files_path/gwcc_pii_spec.csv#gwcc_pii_spec.csv,$spec_files_path/gwcc_table_spec.csv#gwcc_table_spec.csv,/etc/spark/conf/hive-site.xml \
  --properties-file /usr/lib/spark/conf/spark-defaults.conf \
- $jar_path/$spark_app_jar_file_suffix-$spark_app_jar_file_version \
- gwcc_ci_dataingestion
- 
+ $ingestion_jar_path/$ingestion_jar_name \
+gwcc_ci_dataingestion 1>>$log_file 2>&1
 status=$?
 echo "Completed the script and the status is $status"
 if [ ${status} -eq 0 ]; then
 	exit 0
 else
-	echo "Spark job failed with error status, Please have a look at the logs in below file on the server in the appropriate s3 bucket for yarn logs"
+	echo "Spark job failed with error status for GWCC CI, Please have a look at the logs in below file on the server in the appropriate s3 bucket for yarn logs"
 exit 1
 fi
+
 
