@@ -2,43 +2,35 @@
 
 
 echo "Started the script for PCAGG CI "
-base_dir=/home/hadoop/edf
-hadoop_base_dir=/user/hadoop/edf
-spec_files_path=$base_dir/pcagg/spec_files
-jar_path=$base_dir/jars
-spark_app_jar_file_suffix=edf_dataingestion-assembly
-spark_app_jar_file_version=1.1.5.jar
+source /home/hadoop/conf/env_conf.properties
+date=`date +%Y-%m-%d`
+date_ts=`date '+%Y-%m-%d_%H%M%S%s'`
+mkdir -p $ingestion_base_dir/logs/$date
+log_file=$ingestion_base_dir"/logs/"$date"/pcaggCIdataingestion_"$date_ts".log"
+
+spec_files_path=$ingestion_base_dir/pcagg/spec_files
 
 spark-submit --class edf.dataingestion.DataLoad \
- --master yarn --deploy-mode cluster  --conf spark.shuffle.spill=true \
- --conf spark.executor.extraJavaOptions=-XX:MaxPermSize=512m \
- --conf spark.scheduler.mode=FAIR \
- --conf spark.sql.planner.externalSort=true --conf spark.shuffle.manager=sort \
- --conf spark.ui.port=8088 \
- --conf spark.rpc.message.maxSize=1024 --conf spark.file.transferTo=false \
-  --conf spark.driver.maxResultSize=10g --conf spark.rdd.compress=true \
- --conf spark.executor.extraJavaOptions="-Dconfig.resource=spark-defaults.conf" \
- --conf spark.driver.JavaOptions="-Dspark.yarn.app.container.log.dir=/mnt/var/log/hadoop" \
- --conf spark.driver.extraJavaOptions="-Dconfig.file=spark-defaults.conf" \
- --conf "spark.sql.parquet.writeLegacyFormat=true" \
- --conf spark.executor.memory=3g --conf spark.driver.memory=20g  \
- --conf spark.executor.cores=1 \
+ --master yarn --deploy-mode cluster  \
+ --conf $spark_common_conf \
+ --conf spark.executor.cores=3 --conf spark.executor.memory=6g --conf spark.driver.memory=20g --conf spark.executor.memoryOverhead=1g \
  --conf spark.dynamicAllocation.enabled=true \
  --conf spark.dynamicAllocation.maxExecutors=100 \
  --conf spark.dynamicAllocation.minExecutors=10 \
- --conf spark.serializer=org.apache.spark.serializer.KryoSerializer  \
- --name "pcagg_ci_dataingestion"  \
- --files ${spec_files_path}/pcagg.properties#diProperties.properties,${spec_files_path}/pcagg_lookup_info.csv#pcagg_lookup_info.csv,${spec_files_path}/pcagg_pii_spec.csv#pcagg_pii_spec.csv,${spec_files_path}/pcagg_table_spec.csv#pcagg_table_spec.csv,/etc/spark/conf/hive-site.xml \
+ --name pcagg_ci_dataingestion  \
+ --files ${spec_files_path}/pcagg_CI.properties#diProperties.properties,${spec_files_path}/pcagg_lookup_info.csv#pcagg_lookup_info.csv,${spec_files_path}/pcagg_pii_spec.csv#pcagg_pii_spec.csv,${spec_files_path}/pcagg_table_spec.csv#pcagg_table_spec.csv,/etc/spark/conf/hive-site.xml \
  --properties-file /usr/lib/spark/conf/spark-defaults.conf \
- ${jar_path}/${spark_app_jar_file_suffix}-${spark_app_jar_file_version} \
-pcagg_ci_dataingestion
+ $ingestion_jar_path/$ingestion_jar_name \
+pcagg_ci_dataingestion 1>>$log_file 2>&1
 status=$?
 echo "Completed the script and the status is $status"
 if [ ${status} -eq 0 ]; then
 	exit 0
 else
-	echo "Spark job failed with error status for PCAGG CI, Please have a look at the logs in below file on the server in the appropriate s3 bucket for yarn logs"
+	echo "Spark job failed with error status for PCAGG DI, Please have a look at the logs in below file on the server in the appropriate s3 bucket for yarn logs"
 exit 1
 fi
+
+
 
 
